@@ -36,8 +36,9 @@ from config import *
     DEBUG_PANELDELEGATE,
     DEBUG_FILESSOURCE,
     DEBUG_MOZILLASOURCE,
-    DEBUG_ADMINTOOL
-) = range (10)
+    DEBUG_ADMINTOOL,
+    DEBUG_USERDB,
+) = range (11)
 
 debug_modules = {
     DEBUG_USERPROFILE   : ("user-profile",   False),
@@ -49,7 +50,8 @@ debug_modules = {
     DEBUG_PANELDELEGATE : ("panel-delegate", False),
     DEBUG_FILESSOURCE   : ("files-source",   False),
     DEBUG_MOZILLASOURCE : ("mozilla-source", False),
-    DEBUG_ADMINTOOL     : ("admin-tool",     False)
+    DEBUG_ADMINTOOL     : ("admin-tool",     False),
+    DEBUG_USERDB        : ("user-db",        False),
 }
 
 def init_debug_modules ():
