@@ -22,4 +22,5 @@ lib/sources/mozillasource.py
 lib/sources/paneldelegate.py
 lib/storage.py
 lib/unittests.py
+lib/userdb.py
 lib/util.py
