@@ -1,3 +1,8 @@
+Wed Mar 16 19:40:03 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* lib/userdb.py lib/util.py po/POTFILES.in: implementation of userdb,
+	  doesn't write back on changes yet.
+
 2005-03-16  Mark McLoughlin  <markmc@redhat.com>
 
 	* configure.ac: subst a subdir of sysconfdir
